# decision-forest-scorer

./: .gitignore  CMakeLists.txt  CacheAnalysis.txt  Epitome.cpp  Epitome.h  FeaturesMap.cpp  FeaturesMap.h  OldFeaturesMap.cpp  OldFeaturesMap.h  README.md  RapidScorer.h  ResultMask.cpp  ResultMask.h  Tree.cpp  Tree.h  config.h  main.cpp  partial_tests.txt  test.cpp
documents/: doc1
forests/: Fold1_train.json
results/: CacheAnalysis.txt  results.xlsx
src/: Config.h  DocGroup.h  Epitome.h  EqNode.h  RapidScorer.h  ResultMask.cpp  ResultMask.h  SIMDDoubleGroup.h  SIMDEpitome.h  SIMDInfo.h  SIMDResultMask.h  TestCase.h  Tree.h  config.h  main.cpp
src/rapidscorer/: EqNodesRapidScorer.h  LinearizedRapidScorer.h  MergedRapidScorer.h  RapidScorers.h  SIMDRapidScorer.h  SIMDRapidScorer2.h
tests/: epitome_test.cpp  tree_test.cpp
util/: .gitignore  data_generator.py  requirements.txt
